[package]
name = "catalog_tools"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
addressables-rs = { git = "https://github.com/Raytwo/addressables-rs" }
dialoguer = {  version = "0.10.4", features = ["fuzzy-select"] }
# Might cause issues for Linux, but Linux users most likely deserve it? /jk
structopt = "0.3"
camino = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
astra_formats = { git = "https://github.com/thane98/astra-formats" }
serde_toml = { package="toml", version = "0.7" }